# llm-fmt-project

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  llm-fmt.skill.md  pyproject.toml  pyrightconfig.json  ruff.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
.tasks/: 001-project-setup.md  002-json-input.md  003-toon-output.md  004-compact-json-output.md  005-yaml-output.md  006-cli-interface.md  007-stdin-stdout.md  008-dpath-filtering.md  009-max-depth.md  011-token-counting.md  012-analysis-mode.md  013-data-shape-detection.md  014-auto-format.md  015-tsv-output.md  016-error-handling.md  017-config-file.md  018-test-suite.md  019-pypi-release.md  022-csv-support.md  022-truncation-strategies.md  023-rust-core.md  025-rust-benchmarks.md
.tasks/archive/: 002-json-input.md  003-toon-output.md  004-compact-json-output.md  005-yaml-output.md  006-cli-interface.md  007-stdin-stdout.md  008-dpath-filtering.md  009-max-depth.md  010-field-exclusion.md  013-data-shape-detection.md  014-auto-format.md  015-tsv-output.md  016-error-handling.md  018-test-suite.md  020-yaml-input.md  021-xml-input.md  022-truncation-strategies.md  023-rust-core.md
crates/llm-fmt-core/: Cargo.toml
crates/llm-fmt-core/benches/: encoding.rs  parsing.rs  pipeline.rs
crates/llm-fmt-core/src/: analyze.rs  benchdata.rs  detect.rs  lib.rs  pipeline.rs  tokens.rs  value.rs
crates/llm-fmt-core/src/encoders/: csv.rs  toon.rs  tsv.rs  yaml.rs
crates/llm-fmt-core/src/filters/: depth.rs  include.rs  mod.rs  truncate.rs
crates/llm-fmt-core/src/parsers/: csv.rs  json.rs  xml.rs
crates/llm-fmt-py/: Cargo.toml
crates/llm-fmt-py/src/: lib.rs
docs/: architecture.md
src/llm_fmt/: __init__.py  analyze.py  cli.py  config.py  errors.py  pipeline.py  tokens.py
src/llm_fmt/encoders/: __init__.py  csv_encoder.py  json_encoder.py  toon.py  tsv_encoder.py  yaml_encoder.py
src/llm_fmt/filters/: __init__.py  depth.py  exclude.py  include.py
src/llm_fmt/parsers/: __init__.py  csv_parser.py  json_parser.py  xml_parser.py  yaml_parser.py
tests/: __init__.py  conftest.py  test_analyze.py  test_cli.py  test_config.py  test_convert.py  test_csv_encoder.py  test_csv_parser.py  test_errors.py  test_filters.py  test_json_encoder.py  test_json_parser.py  test_pipeline.py  test_properties.py  test_rust_bindings.py  test_tokens.py  test_toon_encoder.py  test_tsv_encoder.py  test_xml_parser.py  test_yaml_encoder.py
