[workspace]
resolver = "2"
members = [
    "crates/llm-fmt-core",
    "crates/llm-fmt-py",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["llm-fmt contributors"]
license = "MIT"
repository = "https://github.com/llm-fmt/llm-fmt"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
quick-xml = { version = "0.37", features = ["serialize"] }
csv = "1"

# Utilities
indexmap = { version = "2", features = ["serde"] }
thiserror = "2"
rand = "0.9"

# Internal crates
llm-fmt-core = { path = "crates/llm-fmt-core" }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
