[package]
name = "llm-fmt-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for token-efficient data format conversion"
keywords = ["llm", "tokens", "json", "yaml", "format"]
categories = ["encoding", "parser-implementations"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
quick-xml.workspace = true
csv.workspace = true
indexmap.workspace = true
thiserror.workspace = true
rand.workspace = true
regex.workspace = true

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
